[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Intro.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/ML_TT_Malavika_Bold.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/ressuruction.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_color = Color( 0.0823529, 0.176471, 0.784314, 1 )
extra_spacing_top = -3
font_data = ExtResource( 2 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.99664
margin_top = -1.49831
margin_right = -2.99664
margin_bottom = -1.49829
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 169.0
margin_bottom = 189.0
custom_constants/separation = 13
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_left = 39.0
margin_right = 83.0
margin_bottom = 20.0
text = "   <   "

[node name="Skip" type="Button" parent="VBoxContainer"]
margin_left = 96.0
margin_right = 136.0
margin_bottom = 20.0
text = "SKIP"

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_left = 149.0
margin_right = 192.0
margin_bottom = 20.0
text = "   ^   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="VBoxContainer"]
margin_left = 205.0
margin_right = 249.0
margin_bottom = 20.0
text = "   >   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 25.0
margin_right = -10.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.160784, 0.552941, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 140.0
margin_right = -40.0
margin_bottom = -105.622
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Next" to="." method="_on_Next_pressed"]
